# skylight-tools

./: .env.example  .gitignore  AGENTS.md  API_REFERENCE.md  CLAUDE.md  README.md  install.sh  openapi.yaml  pyproject.toml
skylight/: go.mod  main.go
skylight/cmd/: account.go  account_login.go  categories.go  categories_listCategories.go  chores.go  chores_completeChore.go  chores_createChore.go  chores_deleteChore.go  chores_listChores.go  chores_updateChore.go  completion.go  frames.go  frames_listFrames.go  lists.go  lists_createItem.go  lists_deleteItems.go  lists_listItems.go  lists_listLists.go  lists_updateItem.go  meals.go  meals_createRecipe.go  meals_createSitting.go  meals_deleteSitting.go  meals_getRecipe.go  meals_listCategories.go  meals_listRecipes.go  meals_listSittings.go  rewardpoints.go  rewardpoints_get.go  root.go  taskbox.go  taskbox_createItem.go  taskbox_deleteItem.go  taskbox_listItems.go  taskbox_updateItem.go
skylight/internal/client/: client.go
skylight/internal/output/: output.go
skylight_mcp/: cli.py  client.py  config.py  server.py
